--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
       const path = window.location.pathname
 
       if (re.test(path)) {
-        window.location = "https://awslabs.github.io#{path}"
+        window.location = "https://awslabs.github.io/#{path}"
       }
     </script>
   </head>
