--- a/404.html
+++ b/404.html
@@ -9,7 +9,8 @@
       const path = window.location.pathname
 
       if (re.test(path)) {
-        window.location = "https://awslabs.github.io/#{path}"
+        console.log("https://awslabs.github.io/${path}")
+        window.location = "https://awslabs.github.io/${path}"
       }
     </script>
   </body>
