I don't know JS any more

--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
 
       if (re.test(path)) {
         console.log("https://awslabs.github.io/${path}")
-        window.location = "https://awslabs.github.io/${path}"
+        window.location = `https://awslabs.github.io/${path}`
       }
     </script>
   </body>
